# refactor_function

./: .gitignore  README.md  pyproject.toml
1_5_remove_redundant_code/: process_data.py
1_initial/: process_data.py
1_remove_redundant_code/: process_data.py
2/: process_data.py  test_process_data.py
2_split_into_smaller_units/: process_data.py  test_process_data.py
3_remove_duplicates/: process_data.py  test_process_data.py
3_remove_redundant_code/: process_data.py  test_process_data.py
4/: process_data.py  test_process_data.py
4_make_extendable/: process_data.py
4_split_into_smaller_units/: process_data.py  test_process_data.py
4_tailor_interfaces/: process_data.py  test_process_data.py
5/: process_data.py  test_process_data.py
5_handle_edge_cases/: process_data.py  test_process_data.py  utils.py
5_make_extendable/: process_data.py  test_process_data.py
5_tailor_interfaces/: process_data.py  test_process_data.py
6/: process_data.py  test_process_data.py
6_handle_edge_cases/: process_data.py
6_tailor_interfaces/: process_data.py
7/: check_arguments.py  process_data.py  test_process_data.py  utils.py
7_handle_edge_cases/: utils.py
